Added a helper to generate alternative links

--- a/Resources/config/services-di.yml
+++ b/Resources/config/services-di.yml
@@ -22,3 +22,12 @@ services:
             - { name: kernel.event_listener, event: kernel.controller, method: onControllerFound, priority: -255 }
        calls:
             - [setContainer, ["@service_container"] ]
+
+
+    alpixel_seo.helper:
+            class: Alpixel\Bundle\SEOBundle\Helper\SEOHelper
+            arguments:
+                - "@request_stack"
+                - "%enabled_locales%"
+                - "@sonata.seo.page.default"
+                - "@router"
